finished drafting examples section

--- a/paper/sections/cost-examples.tex
+++ b/paper/sections/cost-examples.tex
@@ -110,9 +110,8 @@ Now we consider two alternative greedy strategies and show that they also fail, 
     \caption{caption}
     \label{fig:greedy-cheapest}
 \end{figure}
-Similarly, if we wanted to greedily choose the vertex which maximizes the ratio of marginal gain in total weight to vertex cost (i.e., provides the best ``bang-for-your-buck''), we would choose vertex $A$. It guards weight of $2$ and costs $2$, giving a ratio of $1$. Any other vertex can guard at most $w+3$, while costing $w+4$, and $\frac{w+3}{w+4}<1$ for all $w$. Again, choosing $A$ prevents adding any more guards, achieving a total guarded weight of $2$, while an optimal strategy could guard $w+3$, and $\frac{2}{w+3}$ can be arbitrarily small for large $w$. 
-
-
+Similarly, if we wanted to greedily choose the vertex which maximizes the ratio of marginal gain in total weight to vertex cost (i.e., provides the best ``bang-for-your-buck''), we would choose vertex $A$. It guards weight of $2$ and costs $2$, giving a ratio of $1$. Any other vertex can guard at most $w+3$, while costing $w+4$, and $\frac{w+3}{w+4}<1$ for all $w$. Again, choosing $A$ prevents adding any more guards, achieving a total guarded weight of $2$, while an optimal strategy could guard $w+3$, and $\frac{2}{w+3}$ can be arbitrarily small for large $w$. \\\\
+\cite{khuller} considers an analagous problem of covering as many elements as possible with sets, subject to a budget. They similarly show that greedily adding the set which maximizes the ratio of marginal gain in total weight to set cost does not form an approximation. However, they show that if you take the collection of sets $\mathcal{S}$ obtained by this greedy strategy, and you also take the single set which covers the most weight $S_t$, and then you output whichever one covers more weight, you get a $\frac{1}{2}(1-1/e)$-approximation for their problem. And they also show that this simple strategy can be further refined to obtain a $(1-1/e)$-approximation. A logical next step for \BMVVG{} would be to see how well these strategies can do. That is, if we take the set of vertices which was greedily chosen by maximizing the ratio of marginal gain in total weight guarded to vertex cost, and we take the vertex which guards the most weight alone, and we return whichever set of guards ends up guarding more weight, does this give us an approximation? Is it $\frac{1}{2}(1-1/e)$?
 
 
 
