finished drafting, now proofing before submission

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,12 +1,3 @@
-@inproceedings{bukov,
-  author  = {Anton Bukov and Shay Solomon and Tianyi Zhang},
-  year    = {2025},
-  journal = {Proceedings of the 2025 Annual ACM-SIAM Symposium on Discrete Algorithms},
-  pages   = {824--863},
-  title   = {Nearly Optimal Dynamic Set Cover: Breaking the Quadratic-in-$f$ Time Barrier},
-  doi     = {10.1137/1.9781611978322.24}
-}
-
 @article{fragoudakis-paintings,
   author  = {Christodoulos Fragoudakis and Euripides Markou and Stathis Zachos},
   title   = {How to Place Efficiently Guards and Paintings in an Art Gallery},
@@ -49,19 +40,78 @@
 }
 
 @article{feige,
-  author = {feige}
+  author  = {Uriel Feige},
+  title   = {A Threshold of $\ln n$ for Approximating Set Cover},
+  journal = {Journal of the ACM},
+  volume  = {45},
+  issue   = {4},
+  pages   = {634--652},
+  month   = {July},
+  year    = {1998}
 }
 
+
 @article{cornuejols,
-  author = {cornuejols}
+  author  = {Gerard Cornuejols and Marshall L. Fisher and George L. Nemhauser},
+  title   = {Exceptional Paper---Location of Bank Accounts to Optimize Float: An Analytic Study of Exact and Approximate Algorithms},
+  journal = {Management Science},
+  volume  = {23},
+  issue   = {8},
+  pages   = {789--810},
+  month   = {April},
+  year    = {1977}
 }
 
 @article{khuller,
-  author = {khuller}
+  author  = {Samir Khuller and Anna Moss and Joseph (Seffi) Naor},
+  title   = {The Budgeted Maximum Coverage Problem},
+  journal = {Information Processing Letters},
+  volume  = {70},
+  issue   = {1},
+  pages   = {39--45},
+  month   = {April},
+  year    = {1999}
 }
 
 @article{visibility,
-  author = {visibility}
+  author  = {Hossam El Gindy and David Avis},
+  title   = {A Linear Algorithm for Computing the Visibility Polygon from a Point},
+  journal = {Journal of Algorithms},
+  volume  = {2},
+  issue   = {2},
+  pages   = {186--197},
+  month   = {June},
+  year    = {1981}
+}
+
+@inproceedings{das-robustly,
+  author  = {Rathish Das and Omrit Filtser and Matthew J. Katz and Joseph S.B. Mitchell},
+  title   = {Robustly Guarding Polygons},
+  journal = {40th International Symposium on Computational Geometry (SoCG 2024)},
+  volume  = {293},
+  pages   = {1--47},
+  month   = {June},
+  year    = {2024}
+}
+
+@book{orourke-artgallery,
+  author    = {O'Rourke, Joseph},
+  title     = {Art Gallery Theorems and Algorithms},
+  year      = {1987},
+  isbn      = {0195039653},
+  publisher = {Oxford University Press, Inc.},
+  address   = {USA}
+}
+
+@article{hochbaum-maxkcover,
+  author  = {Dorit S. Hochbaum and Anu Pathria},
+  title   = {Analysis of the Greedy Approach in Problems of Maximum $k$-Coverage},
+  journal = {Naval Research Logistics},
+  volume  = {45},
+  issue   = {6},
+  pages   = {615--627},
+  month   = {September},
+  year    = {1998}
 }
 
 
