--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,1 +1,5 @@
 \section{Conclusion}
+This paper explored boundary-focused variants of the Art Gallery problem, where the goal is to maximize the total length or weight of the polygon boundary that is fully guarded by a limited number of vertex guards. We studied three key variants: \MLVG{}, \MVVG{}, and a novel budgeted version, \BMVVG{}. For \MLVG{} and \MVVG{}, we proved that the objective functions are monotone and submodular, allowing the standard greedy algorithm to achieve a $(1-1/e)$-approximation. We also improved the runtime over prior work \cite{fragoudakis-interior} and established that no better approximation is possible unless \cclass{P}=\cclass{NP}. For \BMVVG{}, we demonstrated that several natural greedy strategies fail to yield approximations, and we proposed a slightly more nuanced algorithm, which we conjecture achieves a $\frac{1}{2}(1-1/e)$-approximation.
+
+\subsection{Future Work}
+The analysis of \MLVG{} and \MVVG{} is essentially complete, thanks to their monotone and submodular structure. However, \BMVVG{} still need further theoretical development --- proving that our proposed algorithm achieves the conjectured approximation ratio, and narrowing the gap between this bound and the best possible. Beyond these static settings, our results could also be expanded to dynamic and online settings (similar to the current focus of most research into covering problems). For example, if guards represent fixed cameras in a gallery, the polygon's structure or edge weights may change over time, reflecting layout changes or shifting priorities within an art gallery. In such settings, reconfiguring the camera placement can be expensive. Designing algorithms that can maintain near-optimal coverage with minimal guard movement at each time step would be both practically useful and theoretically interesting, and would reinforce the connection between our problem to ongoing work on dynamic and online Set Cover.
