--- a/paper/sections/submodular.tex
+++ b/paper/sections/submodular.tex
@@ -31,7 +31,7 @@ These two facts also lift quickly to the objective function of \MVVG{}, $W$. Giv
     For any $S\subseteq T\subseteq V$ and $v\notin T$, $W(S\cup\{v\})-W(S)\geq W(T\cup\{v\})-W(T)$.
 \end{claim}
 \noindent
-Equipped with these properties of $L$ and $W$, we can quickly derive greedy algorithms for \MLVG{} and \MVVG{}. Start with an empty solution set $S$. While the size of $S$ is less than $k$, find the vertex $v$ which provides $L$ with the most marginal gain. That is, the vertex $v$ which maximizes $L(S\cup\{v\})-L(S)$. Then add $v$ to $S$ and repeat, until $|S|=k$. Then, because we $L$ and $W$ are both monotone submodular, we get the following facts about maximizing monotone submodular functions under cardinality constraints (i.e. the type of problem \MLVG{} and \MVVG{} both are).
+Equipped with these properties of $L$ and $W$, we can quickly derive greedy algorithms for \MLVG{} and \MVVG{}. Start with an empty solution set $S$. While the size of $S$ is less than $k$, find the vertex $v$ which provides $L$ with the most marginal gain. That is, the vertex $v$ which maximizes $L(S\cup\{v\})-L(S)$. Then add $v$ to $S$ and repeat, until $|S|=k$. Then, because $L$ and $W$ are both monotone submodular, we get the following facts about maximizing monotone submodular functions under cardinality constraints (i.e. the type of problem \MLVG{} and \MVVG{} both are).
 
 \begin{theorem}[\cite{cornuejols}]
     The greedy algorithm is a $(1-1/e)$-approximation algorithm for \MLVG{}. 
@@ -41,5 +41,5 @@ Equipped with these properties of $L$ and $W$, we can quickly derive greedy algo
     For any $\epsilon>0$, there is no $(1-1/e+\epsilon)$-approximation algorithm for \MLVG{}, unless \cclass{P}=\cclass{NP}.
 \end{theorem}
 \noindent
-And the same bounds are true for the greedy algorithm which maximizes $W$ for \MVVG{}. These algorithms require $k$ iterations, and in a given iteration must check the marginal gain provided by at most $n$ vertices. To check the marginal gain of a given vertex $v$, we can maintain the boundary guarded by $S$ (and its length), calculate the boundary guarded by $v$, and then take the union of both boundaries. Finding the boundary guarded by a vertex can be done in $O(n)$ \cite{visibility}, so with proper data structure management, one ``marginal gain check'' can be done in $O(n)$. Thus the greedy algorithm has worst case running time of $O(kn^2)$. \\\\
-We've shown that using the monotonicity and submoduarity of our objective functions, we can achieve simple greedy algorithms for \MLVG{} and \MVVG{}. While \cite{fragoudakis-boundary,fragoudakis-interior,fragoudakis-paintings} propose algorithms that also achieve $(1-1/e)$ approximations for these problems, we also show that these are the \emph{best possible} approximations for these problems, unless \cclass{P}=\cclass{NP}. Our algorithms also run in $O(kn^2)$ time, while their algorithms run in $O(n^4)$ and $O(k^2n^2)$, both less efficient than ours.
+The same approximation guarantees hold for the greedy algorithm applied to \MVVG{}, which maximizes the marginal gain of $W$. As for the runtime of these algorithms, they proceed in $k$ iterations, selecting one vertex per step. In each iteration, we evaluate the marginal gain for up to $n$ candidate vertices. To compute the marginal gain of a vertex $v$, we maintain the portion of the boundary currently guarded by the selected set $S$, compute the portion guarded by $v$, and take their union to determine the new coverage. Since computing the visibility region of a single vertex can be done in $O(n)$ time \cite{visibility}, and union operations can be managed efficiently with appropriate data structures, each marginal gain evaluation takes $O(n)$. Thus, the total running time of the greedy algorithm is $O(kn^2)$ in the worst case.\\\\
+By leveraging the monotonicity and submodularity of the objective functions in \MLVG{} and \MVVG{}, we obtain simple greedy algorithms that achieve a $(1-1/e)$-approximation. While previous work \cite{fragoudakis-boundary,fragoudakis-interior,fragoudakis-paintings} also achieves this approximation ratio, we additionally prove that this is the best possible approximation ratio unless \cclass{P}=\cclass{NP}. Moreover, our approach offers a slight improvement in efficiency: our algorithms run in $O(kn^2)$ time, whereas their algorithms have runtimes of $O(n^4)$ and $O(k^2n^2)$.
